syntax = "proto3";

package reddit;

message User {
  string user_id = 1;
}

message Post {
  string id = 1;
  string title = 2;
  string text = 3;
  string video_image_url = 4;  // URL for video or image

  int32 score = 5;  // score
  enum State_post {
    NORMAL = 0;    
    LOCKED = 1;    
    HIDDEN = 2;
  }
  State_post state = 6; // state
  string publication_date = 7; // date
  string author_id = 8;        // Author
}

message Comment {
  string id = 1;
  string text = 2;
  string author_id = 3;
  int32 score = 4;
  enum State_comment {
    NORMAL = 0;       
    HIDDEN = 1;
  }
  State_comment state = 5; // state
  string parent_post_id = 6;  // ID of parent Post which belongs
  string parent_comment_id = 7;  // ID of patent comment which belongs. Can be null.
}

message RetrieveTopCommentsRequest {
  string post_id = 1;
  int32 n = 2;
}

message CommentBranchRequest {
  string comment_id = 1;
  int32 n = 2;
}

message CommentBranchResponse {
  repeated Comment comments = 1;
  bool has_replies = 2;
}


service RedditService {
  rpc CreatePost(Post) returns (Post); //Create a post
  rpc UpvotePost(Post) returns (Post);  // Upvote the post
  rpc DownvotePost(Post) returns (Post);  // Downvote the post
  rpc RetrievePostContent(Post) returns (Post);  // Retrieve the post content
  rpc CreateComment(Comment) returns (Comment);  // Create a new comment
  rpc UpvoteComment(Comment) returns (Comment);  // Upvote a comment
  rpc DownvoteComment(Comment) returns (Comment);  // Downvote a comment
  rpc RetrieveTopComments(RetrieveTopCommentsRequest) returns (CommentBranchResponse);
  rpc ExpandCommentBranch(CommentBranchRequest) returns (CommentBranchResponse);
}